# jax-scalify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml  tests.yaml
docs/: JAX FP8 matmul tutorial.ipynb  PyTorch FP8 matmul tutorial.ipynb  alpha_stable.md  design.md  gpu_hopper_fp8.ipynb  gpu_hopper_fp8.md  operators.md  scaleprop_proposal_20231110.md  scaleprop_proposal_2_20231110.md  scaleprop_prototype.py  scaleprop_prototype_pytorch_20231114.ipynb  scaleprop_prototype_torch_function.ipynb  scaleprop_prototype_torch_function.py
examples/: autoscale-quickstart.ipynb  scalify-quickstart.ipynb
examples/cifar10/: cifar10_training.py  cifar10_training_with_optax.py  dataset_cifar10.py
examples/mnist/: datasets.py  mnist_classifier_from_scratch.py  mnist_classifier_from_scratch_fp8.py  mnist_classifier_mlp_flax.py
examples/mnist/flax/: main.py  requirements.txt  train.py
examples/mnist/flax/configs/: default.py
experiments/mnist/: cifar_classifier_from_scratch.py  cifar_training.py  datasets.py  mlp.py  mnist_classifier.py  mnist_classifier_from_scratch.py  mnist_classifier_from_scratch_fp8.py  mnist_experiments.json  mnist_experiments_plot.ipynb  optax_cifar_training.py
experiments/mnist/flax_example/: main.py  train.py
experiments/nanogpt/: model.py  model_info.py
jax_scaled_arithmetics/: __init__.py  _version.py
jax_scaled_arithmetics/core/: __init__.py  datatype.py  debug.py  interpreters.py  pow2.py  typing.py  utils.py
jax_scaled_arithmetics/interpreters/: __init__.py  autoscale.py
jax_scaled_arithmetics/lax/: __init__.py  base_scaling_primitives.py  scaled_ops.py  scaled_ops_common.py  scaled_ops_l2.py
jax_scaled_arithmetics/ops/: __init__.py  debug.py  ml_dtypes.py  rescaling.py
jax_scalify/: __init__.py
jax_scalify/core/: __init__.py  datatype.py  debug.py  interpreters.py  pow2.py  typing.py
jax_scalify/lax/: base_scaling_primitives.py  scaled_ops_common.py  scaled_ops_l2.py
jax_scalify/ops/: __init__.py  cast.py  debug.py  ml_dtypes.py  rescaling.py  utils.py
jax_scalify/quantization/: __init__.py  scale.py
jax_scalify/tree/: __init__.py  tree_util.py
jax_scalify/utils/: __init__.py  hlo.py
notebooks/: jax-gpt2-training.ipynb  log-softmax-analysis.ipynb
tests/core/: test_datatype.py  test_interpreter.py  test_pow2.py  test_utils.py
tests/interpreters/: test_interpreter.py
tests/lax/: test_base_scaling_primitives.py  test_numpy_integration.py  test_scaled_ops.py  test_scaled_ops_common.py  test_scaled_ops_l2.py  test_scipy_integration.py
tests/ops/: test_cast.py  test_debug.py  test_ml_dtypes.py  test_rescaling.py
tests/quantization/: test_scale.py
tests/tree/: test_tree_util.py
tests/utils/: test_hlo.py
